# agate

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.ru.md  _typos.toml  agate.example.toml  deny.toml  justfile  mkdocs.yml  rustfmt.toml  sonar-project.properties
crates/agate-audit/: Cargo.toml
crates/agate-audit/migrations/: 0001_init.sql  0002_checkpoints.sql
crates/agate-audit/src/: lib.rs  main.rs
crates/agate-audit/src/application/: mod.rs
crates/agate-audit/src/application/common/: mod.rs
crates/agate-audit/src/application/errors/: base.rs  mod.rs
crates/agate-audit/src/application/usecases/: mod.rs
crates/agate-audit/src/domain/: mod.rs
crates/agate-audit/src/domain/common/: mod.rs
crates/agate-audit/src/domain/merkle/: events.rs  mod.rs
crates/agate-audit/src/domain/ports/: clock.rs  id_generator.rs  mod.rs
crates/agate-audit/src/infrastructure/: audit_metrics.rs  checkpoint_anchor.rs  clock.rs  id_generator.rs  key_store.rs  mod.rs
crates/agate-audit/src/infrastructure/di/: handlers.rs  mod.rs  providers.rs
crates/agate-audit/src/infrastructure/persistence/: mod.rs
crates/agate-audit/src/presentation/: dto.rs  error.rs  handlers.rs  mod.rs  router.rs
crates/agate-audit/src/presentation/http/: health.rs
crates/agate-audit/src/setup/: mod.rs  storage.rs
crates/agate-audit/src/setup/bootstrap/: http.rs
crates/agate-audit/src/setup/configs/: app_config.rs  http_config.rs  mod.rs  postgres_config.rs  storage_config.rs
crates/agate-audit/src/setup/ioc/: container.rs  handles.rs  mod.rs  registry.rs
crates/agate-audit/tests/: application.rs  container_e2e.rs  postgres_gateway.rs  transparency_log.rs
crates/agate-audit/tests/application/: main.rs
crates/agate-audit/tests/application/commands/: append_record.rs  create_log.rs  issue_checkpoint.rs  mod.rs
crates/agate-audit/tests/application/queries/: mod.rs
crates/agate-audit/tests/commands/: mod.rs  transaction.rs
crates/agate-audit/tests/common/: factories.rs  fakes.rs  mod.rs
crates/agate-audit/tests/common/factories/: mod.rs  time.rs
crates/agate-audit/tests/common/fakes/: anchor.rs  log_store.rs  transaction_manager.rs
crates/agate-audit/tests/e2e/: fixture.rs  http.rs  main.rs
crates/agate-audit/tests/integration/: append_scaling.rs  checkpoint.rs  dispatcher.rs  fixture.rs  gateway.rs  main.rs  storage.rs
crates/agate-audit/tests/queries/: get_consistency_proof.rs  get_inclusion_proof.rs
crates/agate-crypto/: Cargo.toml
crates/agate-crypto/src/: ed25519.rs  lib.rs  registry.rs
crates/agate-crypto/src/application/: mod.rs
crates/agate-crypto/src/application/usecases/: mod.rs
crates/agate-crypto/src/domain/: mod.rs
crates/agate-crypto/src/domain/common/: mod.rs
crates/agate-crypto/src/domain/encryption/: mod.rs
crates/agate-crypto/src/domain/hashing/: mod.rs
crates/agate-crypto/src/domain/signing/: mod.rs
crates/agate-crypto/src/infrastructure/: mod.rs
crates/agate-crypto/src/infrastructure/encryption/: adapter.rs  aes_gcm.rs  chacha20poly1305.rs  kuznyechik_mgm.rs  magma_mgm.rs  mod.rs  rust_crypto_aead_factory.rs
crates/agate-crypto/src/infrastructure/hashing/: digest_hasher.rs  mod.rs  rust_crypto_hasher_factory.rs
crates/agate-crypto/src/infrastructure/signing/: ed25519.rs  (+2 more)
crates/agate-crypto/tests/: crypto.rs
crates/agate-crypto/tests/common/: mod.rs
crates/agate-crypto/tests/encryption/: mod.rs
crates/agate-crypto/tests/hashing/: mod.rs
crates/agate-crypto/tests/signing/: mod.rs
crates/agate-policy/: Cargo.toml
crates/agate-policy/src/: lib.rs
crates/agate-policy/src/application/: mod.rs
crates/agate-policy/src/domain/: mod.rs
crates/agate-policy/tests/: decision.rs
crates/agate-proxy/: Cargo.toml
crates/agate-proxy/src/: lib.rs  main.rs
crates/agate-proxy/src/application/: mod.rs
crates/agate-proxy/src/domain/: mod.rs
crates/agate-proxy/src/infrastructure/: dns.rs  fail_mode_policy.rs  mod.rs  proxy_metrics.rs
crates/agate-proxy/src/presentation/: http.rs  mod.rs  stream.rs
crates/agate-proxy/src/setup/: mod.rs
crates/agate-proxy/tests/: ag_ui_mapper.rs  inspector.rs  run_inspection.rs  sse_decoder.rs
crates/agate-proxy/tests/application/: inspector.rs  main.rs
crates/agate-proxy/tests/e2e/: fixture.rs  main.rs  proxy.rs
crates/agate-proxy/tests/integration/: fixture.rs  main.rs  redis_session_memory.rs  upstream.rs
crates/agate-server/: Cargo.toml  Dockerfile
crates/agate-server/src/: lib.rs  main.rs
crates/agate-server/src/infrastructure/: mod.rs
crates/agate-server/src/presentation/: mod.rs
crates/agate-server/src/setup/: mod.rs  tls.rs
crates/agate-server/tests/e2e/: adversarial.rs  controls.rs  engines.rs  fixture.rs  main.rs  policy.rs  reload.rs  saturation.rs  server.rs  session_memory.rs  shutdown.rs  stress.rs
examples/ag-ui-agent/: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  README.md  justfile  pyproject.toml  setup.cfg
examples/ag-ui-agent/src/ag_ui_agent/: config.py  logging_config.py
examples/ag-ui-agent/tests/fakes/: document_repository.py  streamer.py
examples/ag-ui-agent/tests/integration/: conftest.py  test_chat_sse.py  test_documents_rest.py
examples/ag-ui-agent/tests/unit/: test_document_usecases.py
examples/agent-basic/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
examples/agent-basic/src/agent_basic/: __init__.py  __main__.py  ag_ui.py  app.py  config.py  providers.py  run_input.py
examples/audit-verify/: README.md  justfile  pyproject.toml  setup.cfg
examples/audit-verify/src/audit_verify/: __init__.py  __main__.py  cli.py  config.py
examples/audit-verify/tests/: test_reader.py  test_summary.py
examples/protected-demo/: .gitignore  README.md  agate.toml  docker-compose.yaml  docker-compose.yml  justfile  pyproject.toml  setup.cfg
examples/protected-demo/src/protected_demo_client/: __init__.py  __main__.py  cli.py  config.py  render.py  sse.py
examples/protected-demo/tests/: test_observation.py
(+439 files in other folders)
