[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# --- crypto agility (generic subdomain) ---
digest = { version = "0.10", features = ["std"] }
sha2 = "0.10"
sha3 = "0.10"
streebog = "0.10"
ed25519-dalek = "2"
uuid = { version = "1", default-features = false }
jiff = "0.2"
proptest = "1"

# --- internal crates ---
agate-crypto = { path = "crates/agate-crypto", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints that demand boilerplate/doc clutter — silenced to keep code lean.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
doc_markdown = "allow"
