[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
# --- crypto agility (generic subdomain) ---
digest = { version = "0.10", features = ["std"] }
sha2 = "0.10"
sha3 = "0.10"
streebog = "0.10"
ed25519-dalek = "2"
# AEAD (cipher 0.3 / aead 0.4 generation — the only one carrying a stable MGM
# mode for the GOST block ciphers, so Kuznyechik/Magma/MGM stay on one set).
aead = { version = "0.4", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.9", default-features = false, features = ["alloc", "aes"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
kuznyechik = "0.7"
magma = "0.7"
mgm = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
uuid = { version = "1", default-features = false }
jiff = "0.2"
proptest = "1"
async-trait = "0.1"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "migrate", "macros"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
rstest = "0.26"
# --- presentation (HTTP) ---
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"
futures = "0.3"
async-stream = "0.3"

# --- internal crates ---
agate-crypto = { path = "crates/agate-crypto", version = "0.1.0" }
agate-audit = { path = "crates/agate-audit", version = "0.1.0" }
agate-proxy = { path = "crates/agate-proxy", version = "0.1.0" }
agate-policy = { path = "crates/agate-policy", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints that demand boilerplate/doc clutter — silenced to keep code lean.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
