[package]
name = "agate-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crypto agility (hash + signature) for Agate. A generic subdomain, not a shared kernel."

[features]
default = ["sha2"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
streebog = ["dep:streebog"]
ed25519 = ["dep:ed25519-dalek"]

[dependencies]
digest = { workspace = true }
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
streebog = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }

[lints]
workspace = true
