[package]
name = "agate-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy bounded context: content/authorization decisions over inspected agent actions."

[dependencies]
# A pure domain: no async runtime, transport, or framework deps. The context
# decides verdicts from in-memory rules and depends on nothing internal.
# `regex` is a pure CPU matcher (no async/IO), used for richer redaction rules.
regex = { workspace = true }
# `serde_json` is a pure CPU parser (no async/IO), used to evaluate structured
# argument predicates over the parsed tool-call arguments.
serde_json = { workspace = true }

[lints]
workspace = true
