[package]
name = "agate-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proxy bounded context: inline inspection of LLM-agent traffic, protocol-agnostic core."

[dependencies]
uuid = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
