[package]
name = "agate-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proxy bounded context: inline inspection of LLM-agent traffic, protocol-agnostic core."

[dependencies]
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
axum = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
froodi = { version = "1.0.0-beta.18", features = ["async", "axum"] }

[[test]]
name = "application"
path = "tests/application/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true
