[package]
name = "agate-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proxy bounded context: inline inspection of LLM-agent traffic, protocol-agnostic core."

[dependencies]
uuid = { workspace = true, features = ["v4", "v5"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
url = "2"
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
axum = { workspace = true }
governor = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
froodi = { version = "1.0.0-beta.18", features = ["async", "axum"] }
# Optional shared session-memory backend (the `redis` feature); the in-memory
# adapter needs no external service, so Redis stays opt-in.
redis = { workspace = true, optional = true }

[features]
# A Redis-backed cross-run session-replay ledger, shared across proxy instances.
redis = ["dep:redis"]

[dev-dependencies]
# ServiceExt::oneshot for driving the router in middleware tests.
tower = { version = "0.5", features = ["util"] }
# Real Redis for the session-memory backend integration test (feature `redis`).
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[[test]]
name = "application"
path = "tests/application/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true
