[package]
name = "agate-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composition root: wires the proxy data plane to the audit transparency log."

[dependencies]
# The Redis session-memory backend is always available in the server binary
# (selected at runtime by `[policy.session_memory].backend`).
agate-proxy = { workspace = true, features = ["redis"] }
agate-audit = { workspace = true }
agate-policy = { workspace = true }
# For KeyId when wiring the periodic checkpoint issuer.
agate-crypto = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
# Cooperative-cancellation + task-tracking primitives for supervised background
# tasks (the outbox, checkpoint scheduler, and CEL hot-reload): one shutdown
# token, awaited as a group on graceful shutdown. `rt` enables `TaskTracker`.
tokio-util = { version = "0.7", features = ["rt"] }
froodi = { version = "1.0.0-beta.18", features = ["async"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.33"
figment = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
# Pin the ring provider explicitly (reqwest already pulls rustls+ring) so the
# process default CryptoProvider is unambiguous.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Optional CEL policy engine (the `policy-cel` feature): a config-selected
# PolicyPort backend evaluating operator CEL rules. Off by default so the dep
# tree is absent unless built in.
cel = { version = "0.13", optional = true }
arc-swap = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
# Optional CEL policy-file watcher (auto-reload on change). Cross-platform
# (inotify / FSEvents / kqueue / ReadDirectoryChangesW). Stable 8.x, not the 9 RC.
notify = { version = "8", optional = true }
# Optional Rego (OPA policy language) engine: a pure-Rust interpreter, the second
# config-selected PolicyPort backend. Off by default so its dep tree is absent.
regorus = { version = "0.10", optional = true }

[features]
# A pluggable CEL policy engine selected by `[policy].backend = "cel"`.
policy-cel = ["dep:cel", "dep:arc-swap", "dep:toml", "dep:notify"]
# A Rego (OPA) policy engine selected by `[policy].backend = "rego"`. Shares the
# arc-swap/notify machinery (hot-reload + file-watch) with the CEL backend.
policy-rego = ["dep:regorus", "dep:arc-swap", "dep:notify"]

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
reqwest = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
axum = { workspace = true }
agate-crypto = { workspace = true, features = ["ed25519"] }
rcgen = "0.14"
tempfile = "3"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true
