[project]
name = "agent-basic"
version = "0.1.0"
description = "A minimal AG-UI agent (ag2 + dishka) that Agate sits in front of"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web server for the AG-UI SSE endpoint.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Dependency injection. dishka>=1.4 ships the FastAPI integration we use.
    "dishka>=1.4",
]

# `ag2` and `dishka-ag2` are only needed for the "real agent" mode. They pull in
# heavier deps and a (beta) API surface that drifts, so they live in an optional
# group. The default `stub` mode needs none of them — see README.
#
# VERIFY: `pip install ag2` ships the beta framework under `autogen.beta`; there
# is no separate `ag2-beta` distribution on PyPI (the maintainer's "ag2-beta"
# refers to this beta line). The AG-UI bridge needs the `ag-ui` extra.
[project.optional-dependencies]
ag2 = [
    "ag2[openai,ag-ui]>=0.10",
    # DI integration for the AG2 beta agent loop. VERIFY: 0.3 is the latest
    # release at time of writing; its API may still move.
    "dishka-ag2>=0.3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[project.scripts]
# `uv run agent-basic` starts the server (stub mode by default).
agent-basic = "agent_basic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_basic"]

[tool.uv]
# Keep the optional `ag2` group out of the default sync so the stub mode stays
# lightweight and key-free. Install it explicitly with `--extra ag2`.
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py310"
