[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "audit_verify"
module-root = "src"

[project]
name = "audit-verify"
version = "0.1.0"
description = "Inspect Agate's transparency log: show the recorded (event, verdict) leaves."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Pure-Python Postgres driver — no system libpq needed.
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "flake8>=7.1",
    "wemake-python-styleguide>=1.0",
]

[project.scripts]
audit-verify = "audit_verify.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.mypy]
files = ["src/audit_verify", "tests"]
strict = true
python_version = "3.13"
warn_unreachable = true
no_implicit_reexport = true
disallow_any_generics = true

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", "D104", "D107", "COM812", "ANN401",
    "EM101", "EM102", "TRY003",
    "TC001", "TC002", "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D100", "D101", "D102", "D103", "D104", "PLR2004", "ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["audit_verify"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
