[project]
name = "protected-demo-client"
version = "0.1.0"
description = "Client that sends an AG-UI run through Agate and prints the inspected stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # httpx streams the SSE response cleanly with timeouts.
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[project.scripts]
protected-demo-client = "protected_demo_client.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protected_demo_client"]

[tool.ruff]
line-length = 100
target-version = "py310"
